src/features/auth/components/LoginForm/LoginForm.module.scss
@import '@/styles/index';

// Login Form Wrapper
.form_wrapper {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100vh;
}

// Header
.header {
	display: flex;
	flex-direction: column;
	align-items: center;
}

// Logo
.logo {
	width: 60px;
	img {
		border-radius: 50px;
	}
}

// Title
.title {
	margin-top: 10px;
	margin-bottom: 20px;
	font-weight: bold;
	font-size: 45px;
	color: black;
}

// Form
.form {
	border-radius: $app-main-radius + 20px;
	background: white;
	width: 550px;
	height: auto;
	padding: 50px;
	position: relative;
	label {
		font-size: 18px;
	}
}

// Control
.control {
	display: flex;
	align-items: center;
}

// Username Input
.username,
.password {
	font-weight: 500;
}

// Password Visible
.password_visible {
	cursor: pointer;
}

// Forgot Password
.forgot_password {
	display: flex;
	justify-content: flex-end;
	margin-top: 3px;
}

// Label
.label {
	margin-top: 20px;
}

// Login Button
.login_wrapper {
	display: flex;
	justify-content: center;
}

.login {
	margin-top: 20px;
	width: 100%;
}

// To Register
.to_register {
	display: flex;
	justify-content: center;
	margin-top: 30px;
	span {
		margin-right: 5px;
	}
}

// Responsive

// Mobile Begin
@media (max-width: 515px) {
	// Title
	.title {
		font-size: 30px;
	}

	.form {
		height: 100vh;
		border-radius: 0;
	}
}

